@@ -1,0 +1,9 @@
+
+<div id="registration-wrapper"> 
+    <form name="registerform" id="registerform" autocomplete="off" method="POST">
+        <input type="text" name="username" placeholder="Username">
+		<input type="text" name="password" placeholder="password">
+		<input type="text" name="action" value="{register_action}" style="display:none">
+        <input type="submit" value="{register_submit_text}">
+    </form> 
+</div>        
